# static-ordering-eval

./: CMakeLists.txt  README.md  static-ordering-eval.cpp  static-ordering-eval.hpp  tests.cpp
